--- a/index.css
+++ b/index.css
@@ -12,10 +12,11 @@ body {
 #name {
     float: left;
     width: 290px;
-    background-color: rgba(0, 126, 6, 0.521);
-    color: darkblue;
+    background-color: rgb(0, 143, 136);
+    color: white;
     font-size: 20px;
-    height: 80px;
+    padding: 10px;
+    height: 60px;
     margin-left: 21%;
 }
 
@@ -31,11 +32,36 @@ h1 {
 .link {
     float: right;
     text-align: right;
-    color: black;
-    margin: 10px;
+    color: rgb(48, 48, 48);
     padding: 5px;
+    height: 30px;
 }
 
+#about {
+    border-left-style: solid;
+    padding: 4px;
+    padding-left: 20px;
+    margin: 5px;
+    height: 40px;
+    font-size: 16px;
+}
+
+#portfolio {
+    border-left-style: solid;
+    padding: 4px;
+    padding-left: 20px;
+    margin: 5px;
+    height: 40px;
+    font-size: 16px;
+}
+
+#contact {
+    padding: 4px;
+    padding-left: 20px;
+    margin: 5px;
+    height: 40px;
+    font-size: 16px;
+}
 
 #bottom {
     
@@ -65,6 +91,7 @@ h1 {
 }
 
 #information {
+    font-size: 16px;
 
 }
 
