--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ h1 {
     color: rgb(48, 48, 48);
     padding: 5px;
     height: 30px;
+    padding-top: 18px;
 }
 
 #about {
@@ -42,7 +43,7 @@ h1 {
     padding: 4px;
     padding-left: 20px;
     margin: 5px;
-    height: 40px;
+    height: 25px;
     font-size: 16px;
 }
 
@@ -51,7 +52,7 @@ h1 {
     padding: 4px;
     padding-left: 20px;
     margin: 5px;
-    height: 40px;
+    height: 25px;
     font-size: 16px;
 }
 
@@ -59,8 +60,13 @@ h1 {
     padding: 4px;
     padding-left: 20px;
     margin: 5px;
-    height: 40px;
+    height: 25px;
     font-size: 16px;
+}
+
+.zero {
+    margin: 0;
+    padding: 3px;
 }
 
 #bottom {
@@ -71,10 +77,9 @@ h1 {
     position: relative;
     text-align: center;
     width: 55%;
-    border: solid black;
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.712);
-    height: 400px;
+    height: auto;
     margin-top: 33px;
     padding: 20px;
 }
