--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: rgb(212, 212, 212);
     height: 300px;
@@ -38,14 +37,15 @@ h1 {
     padding-top: 18px;
 }
 
-#about {
-    border-left-style: solid;
+
+#contact {
     padding: 4px;
     padding-left: 20px;
     margin: 5px;
     height: 25px;
     font-size: 16px;
 }
+
 
 #portfolio {
     border-left-style: solid;
@@ -56,13 +56,17 @@ h1 {
     font-size: 16px;
 }
 
-#contact {
+
+
+#about {
+    border-left-style: solid;
     padding: 4px;
     padding-left: 20px;
     margin: 5px;
     height: 25px;
     font-size: 16px;
 }
+
 
 .zero {
     margin: 0;
@@ -104,3 +108,18 @@ img {
     float: left;
     width: 200px;
 }
+
+footer {
+    text-align: center;
+    background-color: darkslategray;
+    color: white;
+    border-top: solid  rgb(0, 143, 136);
+    margin: 0 auto;
+    height: auto;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
