--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 body {
     background-color: rgb(212, 212, 212);
     height: 300px;
+    background-image: url("https://images.freecreatives.com/wp-content/uploads/2015/12/Nasty-Fabric-Grey-Pattern-for-Website-Background.jpg")
 }
 
 #top {
-    background: white;
+    background: rgb(230, 230, 230);
     height: 80px;
     top: 0;
 }
@@ -13,7 +14,7 @@ body {
     float: left;
     width: 290px;
     background-color: rgb(74, 170, 165);
-    color: white;
+    color: rgb(230, 230, 230);
     font-size: 20px;
     padding: 10px;
     height: 60px;
@@ -62,7 +63,11 @@ h1 {
     margin: 0;
     padding: 3px;
     padding-left: 7px;
+}
 
+.zero:hover {
+    background-color: rgb(74, 170, 165);
+    color: rgb(230, 230, 230);
 }
 
 .box {
@@ -113,16 +118,18 @@ img {
     height: 200px;
 }
 
-.container {
-}
 
 footer {
     text-align: center;
     background-color: darkslategray;
-    color: white;
+    color: rgb(230, 230, 230);
     border-top: solid  rgb(0, 143, 136);
     height: auto;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    left: 0;
     width: 99%;
+    padding: 10px;
+    margin-left: 0;
+    margin: 0;
 }
